Add vercel analytics!

--- a/index.html
+++ b/index.html
@@ -724,6 +724,6 @@
         </audio>
 
         <script src="script.js"></script>
+        <script defer src="/_vercel/insights/script.js"></script>
 </body>
-
 </html>
