--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <div class="slider-group">
                         <input type="range" class="sliderr" min="0" max="100" value="100" draggable="false"
                             id="brightness-slider">
-                        <svg style="position: absolute;left: calc(100% - 95.25px);top: calc(100% - 142px);pointer-events: none;"
+                        <svg style="position: absolute;left: calc(100% - 95px);top: calc(100% - 142px);pointer-events: none;"
                             width="22px" height="22px" viewBox="0 0 24 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -364,7 +364,7 @@
                 </div>
 
                 <div class="iframe-window-content">
-                    <iframe id="googleIframe" src="null" width="100%" height="100%" style="border:none;"
+                    <iframe id="googleIframe" src="" width="100%" height="100%" style="border:none;"
                         tabindex="-1"></iframe>
                 </div>
             </div>
@@ -389,7 +389,7 @@
                 </div>
 
                 <div class="iframe-window-content">
-                    <iframe id="winIframe" src="null" width="100%" height="100%" style="border:none;"
+                    <iframe id="winIframe" src="" width="100%" height="100%" style="border:none;"
                         tabindex="-1"></iframe>
                 </div>
             </div>
@@ -724,6 +724,7 @@
         </audio>
 
         <script src="script.js"></script>
+
         <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
