--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <div id="spc" style="user-select: none;  z-index: 9999999;" class="startPc"></div>
             <p style="font-size: 1rem; position:absolute; bottom: 30px; color: white; text-align: center;"> This project
                 looks best in <b>fullscreen</b>, so please press the <b>F11</b> key to make this window
-                <b>fullscreen</b>.</p>
+                <b>fullscreen</b>.
+            </p>
         </div>
 
         <div id="lock_screen" class="screen hid">
@@ -695,36 +696,39 @@
             </div>
         </div>
 
-        <audio id="button-click">
-            <source
-                src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Sound%20FX/Click%20Sound.ogg?raw=true"
-                type="audio/ogg">
-            Your browser does not support the audio element.
-        </audio>
+    </div>
 
-        <audio id="startup">
-            <source
-                src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Sound%20FX/Startup%20Sound.ogg?raw=true"
-                type="audio/ogg">
-            Your browser does not support the audio element.
-        </audio>
+    <audio id="button-click">
+        <source
+            src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Sound%20FX/Click%20Sound.ogg?raw=true"
+            type="audio/ogg">
+        Your browser does not support the audio element.
+    </audio>
 
-        <audio id="logoff">
-            <source
-                src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Sound%20FX/Shutdown%20Sound.ogg?raw=true"
-                type="audio/ogg">
-            Your browser does not support the audio element.
-        </audio>
+    <audio id="startup">
+        <source
+            src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Sound%20FX/Startup%20Sound.ogg?raw=true"
+            type="audio/ogg">
+        Your browser does not support the audio element.
+    </audio>
 
-        <audio id="paintAudio">
-            <source
-                src="https://www.dropbox.com/scl/fi/juh7wl24yz6z4eq4kz5v4/Paint_FX.mp3?rlkey=wws5twvzgqvzl53qphx530132&st=9sq4xrh2&raw=1"
-                type="audio/mp3">
-            Your browser does not support the audio element.
-        </audio>
+    <audio id="logoff">
+        <source
+            src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Sound%20FX/Shutdown%20Sound.ogg?raw=true"
+            type="audio/ogg">
+        Your browser does not support the audio element.
+    </audio>
 
-        <script src="script.js"></script>
+    <audio id="paintAudio">
+        <source
+            src="https://www.dropbox.com/scl/fi/juh7wl24yz6z4eq4kz5v4/Paint_FX.mp3?rlkey=wws5twvzgqvzl53qphx530132&st=9sq4xrh2&raw=1"
+            type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
 
-        <script defer src="/_vercel/insights/script.js"></script>
+    <script src="script.js"></script>
+
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
+
 </html>
