--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div id="faulty-text">Preparing Automatic Repair</div>
 
             <footer id="footer-text">
-                <p class="made" style="font-size:0.5rem; user-select: none;">Made by Shourya</p>
+                <p class="made" style="font-size:0.5rem; user-select: none;">Made by RickByte</p>
             </footer>
         </div>
 
@@ -169,9 +169,9 @@
                         <span>CMD</span>
                     </div>
                     <div id="ee-app-btn" draggable="false" class="app-button">
-                        <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/eeIco.webp?raw=true"
-                            alt="More">
-                        <span>More</span>
+                        <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Github.webp?raw=true"
+                            alt="Github">
+                        <span>Github</span>
                     </div>
                 </div>
 
@@ -490,9 +490,9 @@
             <div id="ee-window" class="app-window hidden no-resize">
                 <div class="for-glow">
                     <div class="window-header">
-                        <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/eeIco.webp?raw=true"
+                        <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Github.webp?raw=true"
                             alt="More">
-                        <span class="eeClo">The Dev Himself !?</span>
+                        <span class="eeClo">Github</span>
                         <div class="window-controls">
                             <button class="minimize-btn">-</button>
                             <button class="maximize-btn" style="display: none;">▢</button>
@@ -508,11 +508,12 @@
                     </div>
 
                     <div class="ee-window-content">
-                        <div class="eeflex" id="eeHeart">
-                            <img class="eeDev" id="eeDev"></img>
-                            <div class="eeDevName">I am the dev, btw name's <b>SHOURYA</b> and my pronous are
-                                <b>HE/HIS</b>. I hope you have a good day or would you?! [Vsauce Theme Starts Playing]
-                            </div>
+                        <div class="card">
+                            <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Backgrounds/Dev%20Photo.jpg?raw=true" alt="Profile" class="avatar">
+                            <div class="user-name">RickByte</div>
+                            <div class="user-info">immobilesmile70 | he/him</div>
+                            <div class="user-bio">Game Dev | Web Dev | UI/UX Enthusiast</div>
+                            <button class="github-btn" onclick="openGitHub()">View GitHub</button>
                         </div>
                     </div>
                 </div>
@@ -620,8 +621,8 @@
                         src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/CMD.webp?raw=true"
                         alt="cmd">CMD</div>
                 <div class="icon" draggable="true" id="moreDIcon"><img
-                        src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/eeIco.webp?raw=true"
-                        alt="More">More</div>
+                        src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Github.webp?raw=true"
+                        alt="More">Github</div>
             </div>
 
             <div id="taskbar" class="taskbar">
@@ -651,14 +652,14 @@
                             src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Winception.webp?raw=true"
                             alt="Windows"></div>
                     <div class="tile hidden hide" id="tile6"><img
-                            src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/eeIco.webp?raw=true"
-                            alt="More"></div>
+                            src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Github.webp?raw=true"
+                            alt="Github"></div>
                     <div class="tile hidden hide" id="tile5"><img
                             src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Notepad.webp?raw=true"
                             alt="Notepad"></div>
                     <div class="tile hidden hide" id="tile7"><img
                             src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/CMD.webp?raw=true"
-                            alt="cmd"></div>
+                            alt="CMD"></div>
                 </div>
 
                 <div id="win-toast" class="icon-container">
