Fix image dragging

--- a/index.html
+++ b/index.html
@@ -135,42 +135,42 @@
                 <div class="app-buttons">
                     <div id="clock-app-btn" draggable="false" class="app-button">
                         <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Clock.webp?raw=true"
-                            alt="Clock">
+                            alt="Clock" draggable="false">
                         <span>Clock</span>
                     </div>
                     <div id="calculator-app-btn" draggable="false" class="app-button">
                         <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Calculator.webp?raw=true"
-                            alt="Calculator">
+                            alt="Calculator" draggable="false">
                         <span>Calculator</span>
                     </div>
                     <div id="paint-app-btn" draggable="false" class="app-button">
                         <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Paint.webp?raw=true"
-                            alt="Paint">
+                            alt="Paint" draggable="false">
                         <span>Paint</span>
                     </div>
                     <div id="google-app-btn" draggable="false" class="app-button">
                         <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Google.webp?raw=true"
-                            alt="Google">
+                            alt="Google" draggable="false">
                         <span>Google</span>
                     </div>
                     <div id="win-app-btn" draggable="false" class="app-button">
                         <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Winception.webp?raw=true"
-                            alt="Windows">
+                            alt="Windows" draggable="false">
                         <span>Winception</span>
                     </div>
                     <div id="notepad-app-btn" draggable="false" class="app-button">
                         <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Notepad.webp?raw=true"
-                            alt="Notepad">
+                            alt="Notepad" draggable="false">
                         <span>Notepad</span>
                     </div>
                     <div id="cmd-app-btn" draggable="false" class="app-button">
                         <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/CMD.webp?raw=true"
-                            alt="cmd">
+                            alt="cmd" draggable="false">
                         <span>CMD</span>
                     </div>
                     <div id="ee-app-btn" draggable="false" class="app-button">
                         <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Github.webp?raw=true"
-                            alt="Github">
+                            alt="Github" draggable="false">
                         <span>Github</span>
                     </div>
                 </div>
@@ -491,7 +491,7 @@
                 <div class="for-glow">
                     <div class="window-header">
                         <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Github.webp?raw=true"
-                            alt="More">
+                            alt="Github Pfp" draggable="false">
                         <span class="eeClo">Github</span>
                         <div class="window-controls">
                             <button class="minimize-btn">-</button>
@@ -638,28 +638,28 @@
                 <div class="taskbar-flex">
                     <div class="tile hidden hide" id="tile0"><img
                             src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Paint.webp?raw=true"
-                            alt="Paint"></div>
+                            alt="Paint" draggable="false"></div>
                     <div class="tile hidden hide" id="tile1"><img
                             src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Calculator.webp?raw=true"
-                            alt="Calculator"></div>
+                            alt="Calculator" draggable="false"></div>
                     <div class="tile hidden hide" id="tile2"><img
                             src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Clock.webp?raw=true"
-                            alt="Clock"></div>
+                            alt="Clock" draggable="false"></div>
                     <div class="tile hidden hide" id="tile3"><img
                             src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Google.webp?raw=true"
-                            alt="Google"></div>
+                            alt="Google" draggable="false"></div>
                     <div class="tile hidden hide" id="tile4"><img
                             src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Winception.webp?raw=true"
-                            alt="Windows"></div>
+                            alt="Windows" draggable="false"></div>
                     <div class="tile hidden hide" id="tile6"><img
                             src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Github.webp?raw=true"
-                            alt="Github"></div>
+                            alt="Github" draggable="false"></div>
                     <div class="tile hidden hide" id="tile5"><img
                             src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/Notepad.webp?raw=true"
-                            alt="Notepad"></div>
+                            alt="Notepad" draggable="false"></div>  
                     <div class="tile hidden hide" id="tile7"><img
                             src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/App%20Icons/CMD.webp?raw=true"
-                            alt="CMD"></div>
+                            alt="CMD" draggable="false"></div>
                 </div>
 
                 <div id="win-toast" class="icon-container">
