--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="slider-group">
                         <input type="range" class="sliderr" min="0" max="100" value="100" draggable="false"
                             id="brightness-slider">
-                        <svg style="position: absolute;left: calc(100% - 95px);top: calc(100% - 142px);pointer-events: none;"
+                        <svg id="sun-icon" style="position: absolute;left: calc(100% - 95px);top: calc(100% - 142px);pointer-events: none;"
                             width="22px" height="22px" viewBox="0 0 24 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
