Added a manifest file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Windows 12 Concept</title>
     <link rel="icon" href="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json" />
 </head>
 
 <body>
