--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                 <div class="logo-part_ini part13"></div>
                 <div class="logo-part_ini part14"></div>
             </div>
-            <span id="spinner1" class="spinner"></span>
-            <div id="faulty-text">Preparing Automatic Repair</div>
+            <span id="spinner1" class="spinner">
+                <div id="faulty-text">Preparing Automatic Repair</div>
+            </span>
 
             <footer id="footer-text">
                 <p class="made" style="font-size:0.75rem; user-select: none;">Made by RickByte</p>
