Update Dev Photo

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
                     <div class="ee-window-content">
                         <div class="card">
-                            <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Backgrounds/Dev%20Photo.png" alt="Profile" class="avatar">
+                            <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Backgrounds/Dev%20Photo.jpg" alt="Profile Photo" class="avatar">
                             <div class="user-name">RickByte</div>
                             <div class="user-info">immobilesmile70 | he/him</div>
                             <div class="user-bio">Game Dev | Web Dev | UI/UX Enthusiast</div>
