--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>Windows 12 Concept</title>
+    <title>Windows 12</title>
     <link rel="icon" href="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/favicon.ico"
         type="image/x-icon" />
     <link rel="stylesheet" href="style.css">
@@ -58,13 +58,13 @@
             </div>
 
             <footer id="footer-text">
-                <p class="made" style="font-size:0.75rem; user-select: none;">Made by RickByte</p>
+                <p class="made" style="font-size:0.75rem; user-select: none;">Made by MeowSamOPDZN</p>
             </footer>
         </div>
 
         <div id="user-start_screen" class="screen">
             <div id="spc" style="user-select: none;  z-index: 9999999;" class="startPc"></div>
-            <p style="font-size: 1rem; position:absolute; bottom: 30px; color: white; text-align: center;"> This project
+            <p style="font-size: 1rem; position:absolute; bottom: 30px; color: white; text-align: center;"> This app
                 looks best in <b>fullscreen</b>, so please press the <b>F11</b> key to make this window
                 <b>fullscreen</b>.
             </p>
@@ -96,7 +96,7 @@
                     <span id="pass_fallback" style="font-size: 1.5rem">Provide a pin.</span>
                     <button id="wpass_close_btn">OK</button>
                 </div>
-                <div class="passhint" style="user-select: none;">Password Hint: First Four Natural Numbers</div>
+                <div class="passhint" style="user-select: none;">Password: 1234</div>
                 <button id="shutbut2" style="user-select: none;" class="shutdown-button"
                     style="background-size: 30px 30px; border-radius: 10px; height: 60px; width: 60px;"></button>
             </div>
@@ -517,8 +517,8 @@
                         <div class="card">
                             <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Backgrounds/Dev%20Photo.jpg"
                                 alt="Profile Photo" class="avatar">
-                            <div class="user-name">RickByte</div>
-                            <div class="user-info">immobilesmile70 | he/him</div>
+                            <div class="user-name">MeowSamOPDZN</div>
+                            <div class="user-info">MeowSamOPDZN | he/him</div>
                             <div class="user-bio">Game Dev | Web Dev | UI/UX Enthusiast</div>
                             <button class="github-btn" onclick="openGitHub()">View GitHub</button>
                         </div>
@@ -598,8 +598,8 @@
                     </div>
                 </div>
                 <div class="window-content" style="background: rgba(0, 0, 0, 0.4); padding-left: 5px;">
-                    <div id="output">Macrohard Windows [Version 12.0.50023]
-                        (c) Macrohard Corporation. Some rights reserved.
+                    <div id="output">Meowdows [Version 12.0.50032]
+                        (c) Meowdows Corporation. All rights reserved.
 
                     </div>
                 </div>
@@ -681,7 +681,7 @@
                     <div class="battery-container">
                         <div class="battery">
                             <div class="battery-fill"></div>
-                            <span class="battery-percentage">50</span>
+                            <span class="battery-percentage">53</span>
                         </div>
                     </div>
                 </div>
