--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- Hand Crafted With Love By Shourya :D -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -515,12 +513,12 @@
 
                     <div class="ee-window-content">
                         <div class="card">
-                            <img src="https://raw.githubusercontent.com/immobilesmile70/Windows-12-web/main/assets/Backgrounds/Dev%20Photo.jpg"
+                            <img src="https://avatars.githubusercontent.com/u/223504382?v=4"
                                 alt="Profile Photo" class="avatar">
                             <div class="user-name">MeowSamOPDZN</div>
                             <div class="user-info">MeowSamOPDZN | he/him</div>
                             <div class="user-bio">Game Dev | Web Dev | UI/UX Enthusiast</div>
-                            <button class="github-btn" onclick="openGitHub()">View GitHub</button>
+                            <button class="github-btn" onclick="openGitHub()"><a href="https://github.com/MeowSamOPDZN">View GitHub</a></button>
                         </div>
                     </div>
                 </div>
